<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/question_radiobutton">

    <RelativeLayout
        style="@style/MyQuestionStyling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            style="@style/MyQuestionImageStyling"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:id="@+id/illustration"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/baby"
            />

        <TextView
            style="@style/MyQuestionTextViewStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question"
            android:layout_toRightOf="@+id/illustration"
            android:layout_alignParentTop="true"
            android:text="@string/question"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/illustration"
            android:layout_below="@+id/question"
            android:gravity="left">

            <RadioButton
                android:id="@+id/option-a"
                style="@style/MyQuestionButtonStyling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_a"
                android:onClick="answerRadioButton"/>

            <RadioButton
                android:id="@+id/option-b"
                style="@style/MyQuestionButtonStyling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_b"
                android:onClick="answerRadioButton" />

            <RadioButton
                android:id="@+id/option-c"
                style="@style/MyQuestionButtonStyling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_c"
                android:onClick="answerRadioButton"/>

            <RadioButton
                android:id="@+id/option-d"
                style="@style/MyQuestionButtonStyling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_d"
                android:onClick="answerRadioButton" />
        </RadioGroup>

    </RelativeLayout>

</android.support.v7.widget.CardView>

